# Jarvis

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml
rust/jarvis_native/: Cargo.toml
rust/jarvis_native/src/: file_utils.rs  lib.rs  stats.rs  toolcall.rs
scripts/: install.sh
src/jarvis/: jarvis_native.py
src/jarvis/jarvis_memory_organizer/: memory_organizer.py
src/jarvis/jarvis_stats/: storage.py
src/jarvis/jarvis_tools/: registry.py
src/jarvis/jarvis_utils/: git_utils.py  input.py  utils.py
